--- a/image-updater/applications/always-latest.yml
+++ b/image-updater/applications/always-latest.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd-image-updater.argoproj.io/image-list: example=ghcr.io/skommepa/gitops-cert-level-2-examples
-    argocd-image-updater.argoproj.io/example.update-strategy: latest
+    argocd-image-updater.argoproj.io/example.update-strategy: 1.2.3
 spec:
   project: default
 
