image updater files modified

--- a/sync-hooks-waves/03-postsync-cleanup/cleanup.yml
+++ b/sync-hooks-waves/03-postsync-cleanup/cleanup.yml
@@ -17,4 +17,6 @@ spec:
           - "sleep"
           - "10"
       restartPolicy: Never
-  backoffLimit: 2    
+  backoffLimit: 2
+  annotations:
+    argocd.argoproj.io/hook: PostSync
